--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
           <a href="#"><i class="fa-brands fa-instagram"></i></a>
         </div>
 
-        <a href="#" class="btn">Hire me</a>
+        <a href="contact.html" class="btn">Hire me</a>
       </div>
     </section>
   </main>
 
   <!-- Footer (fixed, inside viewport) -->
   <footer class="site-footer" id="footer">
-    <p>&copy; <span id="year"></span> Poorvi Shetty · Built with HTML, CSS, JS, and jQuery</p>
+    <p>&copy; <span id="year"></span> Poorvi Shetty · Built with ❤️ for the web.</p>
   </footer>
 </body>
 </html>
