completed contact  page

--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
         <p>design and build responsive, user-friendly websites that bring ideas to life on the web. I focus on creating smooth, modern interfaces that combine functionality with great design.</p>
 
         <div class="social-icons">
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="#"><i class="fa-brands fa-github"></i></a>
-          <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/shetty-poorvi"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/poorvishetty193"><i class="fa-brands fa-github"></i></a>        
+         
         </div>
 
         <a href="contact.html" class="btn">Hire me</a>
