--- a/contact.html
+++ b/contact.html
@@ -1,40 +1,94 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Contact · YourName</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Poorvi Shetty · Contact</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <link rel="stylesheet" href="assets/css/contact.css"/>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script defer src="assets/js/main.js"></script>
 </head>
 <body>
   <header class="site-header">
-    <a class="logo" href="index.html">YourName</a>
+    <a class="logo" href="index.html">Poorvi Shetty</a>
     <nav class="nav">
-      <a href="index.html" class="nav-link">Home</a>
-      <a href="about.html" class="nav-link">About</a>
-      <a href="skills.html" class="nav-link">Skills</a>
-      <a href="education.html" class="nav-link">Education</a>
-      <a href="contact.html" class="nav-link active">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="skills.html">Skills</a>
+      <a href="education.html">Education</a>
+      <a href="contact.html" class="active">Contact</a>
     </nav>
-    <button class="nav-toggle" aria-label="Open Menu">&#9776;</button>
+    <button class="nav-toggle" aria-label="Open Menu" aria-expanded="false">
+      <i class="fa-solid fa-bars"></i>
+    </button>
   </header>
 
   <main class="section" id="contact">
-    <h1>Contact</h1>
-    <p class="lead">Let’s build something great together.</p>
-    <form id="contactForm" class="form">
-      <label>Name<input type="text" name="name" required /></label>
-      <label>Email<input type="email" name="email" required /></label>
-      <label>Message<textarea name="message" rows="5" required></textarea></label>
-      <button type="submit" class="btn primary">Send</button>
-      <p id="formStatus" class="status" aria-live="polite"></p>
-    </form>
-  </main>
+    <div class="hero">
+      <h1 class="section-title">Contact</h1>
+      <p class="lead">Let’s build something great together.</p>
+    </div>
+
+    <section class="contact-wrap">
+      <!-- Info panel -->
+      <aside class="contact-info" aria-label="Contact information">
+        <h2>Get in touch</h2>
+        <p>Available for internships, freelance projects, and collaborations.</p>
+        <ul class="info-list">
+          <li><i class="fa-solid fa-envelope"></i><a href="mailto:shettypoorvi193@gmail.com">shettypoorvi193@gmail.com</a></li>
+          <li><i class="fa-solid fa-phone"></i><a href="tel:+917349332836">+91 73493 32836</a></li>
+          <li><i class="fa-solid fa-location-dot"></i>Mangaluru, Karnataka, India</li>
+        </ul>
+        <div class="socials">
+          <a href="https://www.linkedin.com/in/shetty-poorvi"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/poorvishetty193"><i class="fa-brands fa-github"></i></a>         
+          
+        </div>
+      </aside>
+
+      <!-- Form -->
+      <form id="contactForm" class="form" novalidate aria-labelledby="contactFormTitle">
+        <h2 id="contactFormTitle" class="sr-only">Send a message</h2>
+
+        <div class="field">
+          <label for="name">Name</label>
+          <input id="name" name="name" type="text" autocomplete="name" required minlength="2" placeholder="Your name" />
+          <span class="error" id="err-name" role="alert"></span>
+        </div>
+
+        <div class="field">
+          <label for="email">Email</label>
+          <input id="email" name="email" type="email" autocomplete="email" required placeholder="you@example.com"/>
+          <span class="error" id="err-email" role="alert"></span>
+        </div>
+
+        <div class="field">
+          <label for="subject">Subject</label>
+          <input id="subject" name="subject" type="text" placeholder="What’s this about?"/>
+        </div>
+
+        <div class="field">
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="6" required placeholder="Tell me about your idea…"></textarea>
+          <span class="error" id="err-message" role="alert"></span>
+        </div>
+
+        <div class="actions">
+          <button type="submit" class="btn primary">
+            <i class="fa-solid fa-paper-plane"></i> Send
+          </button>
+          <p id="formStatus" class="status" aria-live="polite"></p>
+        </div>
+      </form>
+    </section>
+
+    </main>
 
   <footer id="footer" class="site-footer">
-    <p>&copy; <span id="year"></span> YourName · Built with HTML, CSS, JS, and jQuery</p>
+    <p>&copy; <span id="year"></span> Poorvi Shetty · Built with ❤️ for the web.</p>
   </footer>
 </body>
 </html>
