fixed mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="home-content">
         <h1>Hi, It's <span>Poorvi Shetty</span></h1>
         <h3 class="typing-text">I'm a <span></span></h3>
-        <p>design and build responsive, user-friendly websites that bring ideas to life on the web. I focus on creating smooth, modern interfaces that combine functionality with great design.</p>
+        <p>I design and build responsive, user-friendly websites that bring ideas to life on the web. I focus on creating smooth, modern interfaces that combine functionality with great design.</p>
 
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/shetty-poorvi"><i class="fa-brands fa-linkedin"></i></a>
